The FILE from tmpfile() is not used for anything and just leaked here:
https://dev.gnupg.org/source/gnupg/browse/master/dirmngr/dns.c;0240345728a84d8f235ce05889e83963e52742eb$4507
Should it be assigned to trace->fp ?
The FILE from tmpfile() is not used for anything and just leaked here:
https://dev.gnupg.org/source/gnupg/browse/master/dirmngr/dns.c;0240345728a84d8f235ce05889e83963e52742eb$4507
Should it be assigned to trace->fp ?
| rG GnuPG | |||
| rGe00e68135c01 dns: Fix irrelevant use of tmpfile. | |||
It seems that this part of the code was not finished. Unfortunately upstream of the dns code is unresponsive and thus we started to maintain the code base by ourselves. There is still an open question whether we should do that to the full extend, in which case we would integrate the code closer into the GnuPG framework with its own logging subsystems.
Thus for now, I won't fix this.
This part of code is questionable. It always comes fp!=NULL, so the part should be removed.
If fp==NULL, use of tmpfile is quite questionable because a user can't know where the trace output goes.
I'm going to remove that part.